src/test/ui/codemap_tests/tab_3.stderr
error[E0382]: borrow of moved value: `some_vec`
  --> $DIR/tab_3.rs:7:20
   |
LL |     let some_vec = vec!["hi"];
   |         -------- move occurs because `some_vec` has type `std::vec::Vec<&str>`, which does not implement the `Copy` trait
LL |     some_vec.into_iter();
   |     -------- value moved here
LL |     {
LL |         println!("{:?}", some_vec);
   |                          ^^^^^^^^ value borrowed here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
